objects/SO_Vehicle_Series__c.object
<CustomObject>
    <label>Vehicle Series</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vehicle Series</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>SO_Model__c</fullName>
        <description>Model that this series is associated with.</description>
        <label>Model</label>
        <referenceTo>SO_Vehicle_Model__c</referenceTo>
        <relationshipLabel>Vehicle Series</relationshipLabel>
        <relationshipName>SO_Vehicle_Series</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SO_Model_Year_End__c</fullName>
        <label>Model Year End</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_Model_Year_Start__c</fullName>
        <label>Model Year Start</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <validationRules>
        <fullName>Prevent_End_Before_Start</fullName>
        <active>true</active>
        <errorConditionFormula>IF ( OR( ISBLANK(SO_Model_Year_End__c ),ISBLANK(SO_Model_Year_Start__c ) ), FALSE,
VALUE( SO_Model_Year_End__c ) &lt;  VALUE( SO_Model_Year_Start__c ) )</errorConditionFormula>
        <errorDisplayField>SO_Model_Year_End__c</errorDisplayField>
        <errorMessage>The model year end cannot be before the model year start.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Year_End_is_Valid_Number</fullName>
        <active>true</active>
        <description>The field must be text due to Salesforce number formatting adding a &quot;,&quot; thus validation rule to ensure entered value is a number.</description>
        <errorConditionFormula>IF ( ISBLANK(SO_Model_Year_End__c ), FALSE, 
NOT (  ISNUMBER( SO_Model_Year_End__c ) ) || 
LEN ( SO_Model_Year_End__c ) &lt; 4    )</errorConditionFormula>
        <errorDisplayField>SO_Model_Year_End__c</errorDisplayField>
        <errorMessage>The model year end must be a number.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Year_Start_is_Valid_Number</fullName>
        <active>true</active>
        <description>The field must be text due to Salesforce number formatting adding a &quot;,&quot; thus validation rule to ensure entered value is a number.</description>
        <errorConditionFormula>IF ( ISBLANK(SO_Model_Year_Start__c ), FALSE,
NOT ( ISNUMBER( SO_Model_Year_Start__c ) ) || 
LEN ( SO_Model_Year_Start__c ) &lt; 4  )</errorConditionFormula>
        <errorDisplayField>SO_Model_Year_Start__c</errorDisplayField>
        <errorMessage>The model year start must be a number.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Creation_of_Series_for_SVO</fullName>
        <active>true</active>
        <description>Prevent creation of Series for Non-SVO Models</description>
        <errorConditionFormula>ISNEW() &amp;&amp; ($Permission.SO_Bespoke || $Permission.SO_Private_Office ) &amp;&amp;  SO_Model__r.SO_Is_Available_SVO__c == FALSE</errorConditionFormula>
        <errorMessage>You cannot create Series under the selected Model</errorMessage>
    </validationRules>
</CustomObject>